# SCAE

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: Client.h
client/src/: Client.cpp  main.cpp
common/: CommonUtils.cpp  CommonUtils.hpp  FiniteFieldElement.cpp  FiniteFieldElement.hpp  QTimings.cpp  QTimings.h
gateway/: CMakeLists.txt
gateway/include/: Gateway.h
gateway/src/: Gateway.cpp  main.cpp
server/: CMakeLists.txt
server/include/: Server.h
server/src/: Server.cpp  main.cpp
